[project]
name = "raster-repo"
version = "0.1.0"
description = "Minimal agent-friendly scaffold for incrementally inventorying a messy raster estate Incrementally convert a large, disorganized legacy raster archive into a **consistent, cloud-friendly, queryable dataset**"
readme = "README.md"
authors = [
    { name = "Matt Wilkie", email = "matt.wilkie@yukon.ca" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
raster-repo = "raster_repo:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
