[project]
name = "raster-repo"
version = "0.1.0"
description = "Minimal agent-friendly scaffold for incrementally inventorying a messy raster estate Incrementally convert a large, disorganized legacy raster archive into a **consistent, cloud-friendly, queryable dataset**"
readme = "README.md"
authors = [
    { name = "Matt Wilkie", email = "matt.wilkie@yukon.ca" }
]
requires-python = ">=3.12"
dependencies = [
    "gdal==3.12.1",
]

[[tool.uv.index]]
name = "mentaljam-gdal"
url = "https://gitlab.com/api/v4/projects/61637378/packages/pypi/simple"
explicit = true

[tool.uv.sources]
gdal = { index = "mentaljam-gdal" }

[project.scripts]
raster-repo = "raster_repo:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=9.0.3",
]
